# Edelweiss

./: .gitignore
edelweissd/: Android.bp  Cargo.toml
edelweissd/src/: bpf.rs  collector.rs  controller.rs  main.rs  phenotype.rs  receptor.rs  scanner.rs  utils.rs
edelweissd/src/bpf/: attach.rs  ringbuf.rs  streamer.rs
edelweissd/src/collector/: net.rs
edelweissd/src/scanner/filter/: default.rs
edelweissd/src/utils/: boxable.rs  notifier.rs  startable.rs  tokio.rs
pollen/: .gitignore  Android.bp  CMakeLists.txt  Makefile
pollen/include/pollen/: arch.h  fork.h  net.h  pollen.h  proc.h
pollen/include/pollen/android/: bpf_helper_defs.h
pollen/scripts/: traceprint.py
pollen/src/: forkMonitor.c  fork_monitor.c  netMonitor.c  procMonitor.c
src/: collector.rs  controller.rs  main.rs  phenotype.rs  receptor.rs
