[package]
name = "edelweissd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
libc = "0.2.172"
once_cell = "1.21.3"
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
android_log = "0.1.3"

[features]
default = ["linux_bpf", "env_logging"]
linux_bpf = []
env_logging = []
android_bpf = []
android_logging = []